--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8" />
-        <link rel="stylesheet" href="pages/indexru.css" />
+        <link rel="stylesheet" href="pages/index.css" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Путешествия по России</title>
     </head>
@@ -10,7 +10,7 @@
         <div class="page">
             <header class="header">
                 <img class="header__logo" src="images/header-logo.svg" alt="лого карта России" />
-                <a class="header__lang-link header__lang-link_lang-ru" href="indexru.html">Ru</a>
+                <a class="header__lang-link header__lang-link_lang-ru" href="index.html">Ru</a>
                 <a class="header__lang-link header__lang-link_lang-eng" href="#">En</a>
             </header>
 
