--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </section>
 
                 <section class="intro">
-                    <h3 class="intro__title">Чего мы там не видели?</h3>
+                    <h2 class="intro__title">Чего мы там не видели?</h2>
                     <p class="intro__text">
                         По опросам ВЦИОМ, 95% россиян мечтают куда-нибудь поехать, но только 36% планируют провести отпуск в родной стране. Мол, чего мы тут, дома, не видели? На самом деле, Россия — это целая вселенная с ласковым морем юга,
                         густыми лесами Саян и суровыми льдами плато Путорана. А ещё увидеть все эти красоты можно без миллионов на счету, загранпаспорта и многочасовых перелетов. Как, например, Вера Башмакова — смелая молодая мама, которая
@@ -60,8 +60,8 @@
                 </section>
 
                 <section class="places">
-                    <div class="place">
-                        <h3 class="place__title">Куршская коса</h3>
+                    <article class="place">
+                        <h2 class="place__title">Куршская коса</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
                             <a class="place__link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -77,10 +77,10 @@
                                 городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.
                             </p>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="place">
-                        <h3 class="place__title">Кольский</h3>
+                    <article class="place">
+                        <h2 class="place__title">Кольский</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
                             <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
@@ -93,10 +93,10 @@
                                 интересовались пронизывающей земную кору сверхглубокой скважиной, а от апатитов вас давно накрывает апатия. Но ваша мечта увидеть северное сияние начинает сбываться с билетом в Мурманск.
                             </p>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="place">
-                        <h3 class="place__title">Алтай</h3>
+                    <article class="place">
+                        <h2 class="place__title">Алтай</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
                             <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822">Facebook</a>
@@ -112,10 +112,10 @@
                                 знаменитые манулы — тоже обитатели Алтайского края.
                             </p>
                         </div>
-                    </div>
+                    </article>
 
-                    <div class="place">
-                        <h3 class="place__title">Зимний Байкал</h3>
+                    <article class="place">
+                        <h2 class="place__title">Зимний Байкал</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
                             <a class="place__link" href="https://vk.com/baikalmile">https://vk.com/baikalmile</a>
@@ -128,9 +128,10 @@
                                 льду. В марте 2019 года на фестивале «Байкальская миля» был поставлен мировой рекорд — 197.011 км/ч.
                             </p>
                         </div>
-                    </div>
-                    <div class="place">
-                        <h3 class="place__title">Карелия</h3>
+                    </article>
+
+                    <article class="place">
+                        <h2 class="place__title">Карелия</h2>
                         <div class="place__website">
                             <p class="place__url-heading">URL</p>
                             <a class="place__link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
@@ -143,7 +144,7 @@
                                 километров не встретишь тропы. А на редких тропинках деревья в паре метров от земли помечены медвежьими когтями. Чтобы все знали, кто тут хозяин.
                             </p>
                         </div>
-                    </div>
+                    </article>
                 </section>
 
                 <section class="cover">
@@ -158,23 +159,25 @@
             </main>
 
             <footer class="footer">
-                <ul class="footer__links-list">
-                    <li class="footer__link-list">
-                        <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
-                    </li>
-                    <li class="footer__link-list">
-                        <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
-                    </li>
-                    <li class="footer__link-list">
-                        <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
-                    </li>
-                    <li class="footer__link-list">
-                        <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
-                    </li>
-                    <li class="footer__link-list">
-                        <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
-                    </li>
-                </ul>
+                <nav class="footer__menu">
+                    <ul class="footer__links-list">
+                        <li class="footer__link-list">
+                            <a class="footer__link" href="https://yandex.ru/maps">Карты</a>
+                        </li>
+                        <li class="footer__link-list">
+                            <a class="footer__link" href="https://yandex.ru/pogoda">Погода</a>
+                        </li>
+                        <li class="footer__link-list">
+                            <a class="footer__link" href="https://rasp.yandex.ru">Расписание</a>
+                        </li>
+                        <li class="footer__link-list">
+                            <a class="footer__link" href="https://calendar.yandex.ru">Календарь</a>
+                        </li>
+                        <li class="footer__link-list">
+                            <a class="footer__link" href="https://travel.yandex.ru">Путешествия</a>
+                        </li>
+                    </ul>
+                </nav>
                 <p class="footer__copyright">&copy; 2021. Михайлова Ольга</p>
             </footer>
         </div>
